# easy-discord-music-bot

./: .env.example  README.md  main.py  main.spec  pyproject.toml
assets/docs/Register_Discord_Bot/: Register_Discord_Bot.md
assets/emojis/: README.md
cmds/: Help.py  Music.py
cmds/music_bot/: autocomplete.py  buttons.py  downloader.py  play_list.py  player.py  utils.py
core/: _init_logger.py  config.py  emojis.py  mongodb.py  translator.py
core/locales/: en-US.json  zh-CN.json  zh-TW.json
